--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -7,18 +7,19 @@
     <string name="error">Fehler</string>
     <string name="error_values">Fehler – Hast Du alle erforderlichen Felder ausgefüllt?</string>
     <string name="error_creating_duplicate">Fehler – Schon in Liste?</string>
+    <string name="error_creating_duplicate_tag_db">Fehler – Existiert dieses Schlagwort bereits?</string>
     <string name="success">Erfolgreich abgeschlossen</string>
     <string name="wait">Bitte warten</string>
-    <string name="add">Einfügen</string>
+    <string name="add">Hinzufügen</string>
     <string name="start">Starten</string>
     <string name="edit">Bearbeiten</string>
     <string name="optional">%1$s (optional)</string>
+    <string name="save">Speichern</string>
     <string name="save_changes">Änderungen speichern</string>
     <string name="discard_changes">Änderungen verwerfen</string>
     <string name="delete">Löschen</string>
     <string name="open">Öffnen</string>
     <string name="share">Teilen</string>
-    <string name="options">Optionen</string>
     <string name="print">Drucken</string>
     <string name="select_all">Alles auswählen</string>
     <string name="selected">Ausgewählt</string>
@@ -33,8 +34,10 @@
     <string name="all_cards">Alle Karteikarten</string>
     <string name="all_cards_desc">Gesamte Karteikartensammlung aller Kartenstapel ansehen</string>
     <string name="all_cards_desc_by_pack">Karteikartensammlung dieses Karteikastens ansehen</string>
+    <string name="export_title">Export</string>
     <string name="export_all">Karteikästen als Backup exportieren</string>
     <string name="export_cards">Karteikasten als Backup exportieren</string>
+    <string name="import_title">Import</string>
     <string name="import_cards">Karteikasten/-kästen von Backup importieren</string>
     <string name="import_warn">Nicht alle Daten konnten importiert werden</string>
     <string name="import_okay">Erfolgreich beendet</string>
@@ -53,10 +56,12 @@
     <string name="import_export_include_media">Medien-Referenzen einschließen</string>
     <string name="import_export_include_media_warn_no_files">Die Sicherung enthält nur die Medien-Referenzen, nicht die Dateien selbst. Diese musst Du selbstständig sichern und wiederherstellen.</string>
     <string name="import_export_lines_progress">~%d Zeilen.</string>
+    <string name="import_export_options">%s-Optionen</string>
     <string name="edit_pack">Kartenstapel bearbeiten</string>
     <string name="edit_card">Karteikarte bearbeiten</string>
     <string name="edit_card_media">Verknüpfte Medien verwalten</string>
     <string name="edit_card_media_add">Medien hinzufügen</string>
+    <string name="edit_card_tag">Verknüpfte Schlagworte verwalten</string>
     <string name="edit_card_tag_add">Schlagwort hinzufügen</string>
     <string name="no_media">Keine Medien</string>
     <string name="no_tags">Keine Schlagworte</string>
