--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,18 +12,19 @@
     <string name="error">error</string>
     <string name="error_values">error – did you fill all required fields?</string>
     <string name="error_creating_duplicate">error – already in list?</string>
+    <string name="error_creating_duplicate_tag_db">error – does this tag already exist?</string>
     <string name="success">success</string>
     <string name="wait">please wait</string>
     <string name="add">add</string>
     <string name="start">start</string>
     <string name="edit">edit</string>
     <string name="optional">%1$s (optional)</string>
+    <string name="save">save</string>
     <string name="save_changes">save changes</string>
     <string name="discard_changes">discard changes</string>
     <string name="delete">delete</string>
     <string name="open">open</string>
     <string name="share">share</string>
-    <string name="options">options</string>
     <string name="print">print</string>
     <string name="select_all">select all</string>
     <string name="selected">selected</string>
@@ -38,8 +39,10 @@
     <string name="all_cards">All flashcards</string>
     <string name="all_cards_desc">View all flashcards of all decks</string>
     <string name="all_cards_desc_by_pack">View flashcards of this filing box</string>
+    <string name="export_title">Export</string>
     <string name="export_all">Export filing boxes as backup</string>
     <string name="export_cards">Export filing box as backup</string>
+    <string name="import_title">Import</string>
     <string name="import_cards">Import filing box(es) from backup</string>
     <string name="import_warn">Import not complete</string>
     <string name="import_okay">Import success</string>
@@ -57,11 +60,13 @@
     <string name="import_export_include_media">Include media links</string>
     <string name="import_export_include_media_warn_no_files">Backup only contains media references, no files. You need to backup and restore them on your own.</string>
     <string name="import_export_lines_progress">~%d lines.</string>
+    <string name="import_export_options">%s options</string>
     <string name="edit_collection">Edit filing box</string>
     <string name="edit_pack">Edit deck</string>
     <string name="edit_card">Edit flashcard</string>
     <string name="edit_card_media">manage attached media</string>
     <string name="edit_card_media_add">Add media</string>
+    <string name="edit_card_tag">manage attached tags</string>
     <string name="edit_card_tag_add">Add tag</string>
     <string name="no_media">no media</string>
     <string name="no_tags">no tags</string>
