--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -70,7 +70,7 @@
     <string name="media_missing_dialog">Medien fehlen</string>
     <string name="media_missing_dialog_text">Abbrechen und fehlende Dateien begutachten?</string>
     <string name="image_media">Bildmedien</string>
-    <string name="image_media_print_number_and_limit">%1$d verknüpfte Bilder. Anzeigelimit ist: %2$d.</string>
+    <string name="image_media_print_number_and_limit">%1$d verknüpfte Bilder. Drucklimit ist: %2$d.</string>
     <string name="show_image_media">Bilder anzeigen</string>
     <string name="show_all_media">Alle Medien anzeigen</string>
     <string name="all_media">Alle Medien</string>
