--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -89,7 +89,10 @@
     <string name="delete_file_info">Datenbankeintrag gelöscht. Auch Datei vom Dateisystem löschen?</string>
     <string name="delete_file_without_media_info">Datei vom Dateisystem löschen?</string>
     <string name="delete_multiple_cards">Du bist dabei %1$d Karteikarten zu löschen. Mit Löschen fortfahren?</string>
-    <string name="delete_multiple_packs">Du bist dabei %1$d Kartenstapel mit %2$d Karteikarten zu löschen. Mit Löschen fortfahren?</string>
+    <plurals name="delete_multiple_packs">
+        <item quantity="one">Du bist dabei %1$d Kartenstapel mit einer Karteikarte zu löschen. Mit Löschen fortfahren?</item>
+        <item quantity="other">Du bist dabei %1$d Kartenstapel mit %2$d Karteikarten zu löschen. Mit Löschen fortfahren?</item>
+    </plurals>
     <string name="delete_pack_with_cards">Dieser Kartenstapel enthält Karteikarten. Wenn Du das Löschen fortsetzt, werden auch die enthaltenen Karteikarten gelöscht. Trotzdem löschen?</string>
     <string name="delete_collection_with_packs">Dieser Karteikasten enthält Kartenstapel. Wenn Du das Löschen fortsetzt, werden auch die enthaltenen Kartenstapel samt Karteikarten gelöscht. Trotzdem löschen?</string>
     <string name="move">Verschieben</string>
@@ -141,15 +144,12 @@
     <string name="query_media_image_title">Bilddateien</string>
     <string name="query_media_all_title">Alle Mediendateien</string>
     <string name="list_stats">Listen-Statistiken</string>
-    <string name="list_stat_progress">Lernfortschritt</string>
     <string name="list_stat_cards_total">Karteikarten in Liste: %1$d</string>
     <string name="list_stat_progress_total">Lernfortschritt gesamt: %1$d</string>
     <string name="list_stat_progress_max">Höchster Lernfortschritt: %1$d</string>
     <string name="list_stat_progress_min">Niedrigster Lernfortschritt: %1$d</string>
     <string name="list_stat_progress_avg">Durchschnitts-Lernfortschritt: %1$.2f</string>
-    <plurals name="list_stat_progress_counter_known">
-        <item quantity="other">Lernfortschritt: %1$d</item>
-    </plurals>
+    <string name="list_stat_progress_counter_known">Lernfortschritt: %1$d</string>
     <string name="list_stat_progress_counter_known_0">Kein Lernfortschritt</string>
     <string name="list_stat_progress_counter_known_5_or_more">Lernfortschritt: 5+</string>
     <plurals name="list_stat_progress_counter_number">
